Teste de unidade na view e model

--- a/pokemons/templates/index.html
+++ b/pokemons/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <a class="navbar">Busca Pokémon</a>
     <form>
-        <input type="text" id="buscar-pokemon" placeholder="Exemplo: charmander, bulbasaur">
+        <input type="text" id="buscar-pokemon" placeholder="Exemplo: charmander, bulbasaur" name="buscar">
         <button type="submit">Pesquisar</button>
     </form>
     
